# who_au

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
app/: CMakeLists.txt  CloudApi.cpp  CloudApi.h  api_test.cpp  api_test.h  i_user_interface.h  rename.cpp  rename.h  toFaceApi.cpp  toFaceApi.h  who_au.cpp  who_au.h
cloud_api/: CMakeLists.txt  CloudApi.cpp  CloudApi.h
doc/: Project Structure.drawio  Project_Structure.drawio
gui/: AppView.qml  AuthView.qml  CMakeLists.txt  DetectedFaceViewer.qml  Pseudo_mail_view.qml  app_view.qml  auth_view.qml  main.cpp  main.qml  main_view.qml  presenter.cpp  presenter.h  qml.qrc  worker_script.js
tests/: CMakeLists.txt
tests/test_CloudApi/: test_CloudApi.cpp
